--- a/ChessFabrickFormsApp/Properties/Resources.resx
+++ b/ChessFabrickFormsApp/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="king_black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\king_black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="king_multi" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\king_multi.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="king_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\king_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
